Created most of character creation/editing flow.
